# rust-stm

./: .gitignore  Cargo.toml
benches/: Cargo.toml  README.md
benches/benches/: read.rs  smart_pointers.rs  transactions.rs  tvars.rs  write.rs
benches/src/: lib.rs
stm-core/: Cargo.toml  smart_pointers.md
stm-core/src/: lib.rs  tarc.rs  test.rs  tvar.rs  tweak.rs
stm-core/src/transaction/: control_block.rs  log_var.rs  mod.rs
