[package]
name = "stm"
edition = "2024"
version = "0.4.0"
authors = ["Marthog <Marthog@users.noreply.github.com>"]

description = """
Implementation of Software transactional memory. Allows composable atomic operations.
"""

license = "MIT OR Apache-2.0"
homepage = "https://github.com/Marthog/rust-stm"
repository = "https://github.com/Marthog/rust-stm"
documentation = "https://docs.rs/stm/0.3.0"

readme = "README.md"

keywords = ["stm", "atomic", "transaction", "lockfree", "concurrency"]
categories = ["concurrency"]

[workspace.package]
edition = "2024"
version = "0.4.0"
license = "MIT OR Apache-2.0"

[workspace]
members = ["stm-core", "benches"]

[workspace.dependencies]
stm = { path = ".", features = ["bench"] }
criterion = "0.5"

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true

[features]
default = []
bench = ["stm-core/bench"]

[dependencies]
stm-core = { path = "stm-core" }
