[package]
name = "stm-core"
edition = "2024"
version = "0.4.0"
authors = ["Marthog <Marthog@users.noreply.github.com>"]

description = """
Implementation of Software transactional memory. STM Allows composable atomic operations.
STM-core implements the bare bones of stm usage. The STM crate adds useful data structures.
"""

license = "MIT OR Apache-2.0"
homepage = "https://github.com/Marthog/rust-stm"
repository = "https://github.com/Marthog/rust-stm"
documentation = "https://docs.rs/stm-core/0.3.0"

readme = "README.md"

keywords = ["stm", "atomic", "transaction", "lockfree", "concurrency"]
categories = ["concurrency"]

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true

[features]
default = []
bench = []

[dependencies.parking_lot]
version = "0.12.5"
default-features = false
